fabric8/target/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: product-catalog
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: product-catalog
